修正標題文字，移除「Minify」字樣

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>SQL 即時格式化與 Minify 工具</h1>
+    <h1>SQL 即時格式化工具</h1>
     <p>請在下方輸入您的 SQL 語句：</p>
     <textarea id="sqlInput" placeholder="請輸入 SQL 語句..."></textarea>
     <br>
